# simplewidgets

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
simplewidgets/: fields.py  simple_widget.py  simplewidget.py
simplewidgets/PyQt/: QtCore.py  QtGui.py  __init__.py
simplewidgets/observable/: observable.py  weakmethod.py
simplewidgets/observable/tests/: test_observable.py
simplewidgets/tests/: demowidget.py  test_fields.py  test_simple_widget.py  test_simplewidget.py
tests/: test_fields.py  test_observable.py  test_simplewidget.py
